Updated website to prevent dark mode readers from changing CSS

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,5 +1,11 @@
 ---
 ---
+
+:root {
+  color-scheme: dark
+}
+
+
 @import 'libs/vars';
 @import 'libs/functions';
 @import 'libs/mixins';
